ch08/apps/golist-api/golist-api-Service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: golist-api
  name: golist-api
  namespace: golist
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: golist-api
status:
  loadBalancer: {}
